# code-names-bot-clue-labeler

./: README.md  config.py  pyproject.toml
code_names_bot_clue_labeler/: labeler.py  labeler_window.py  node_utils.py  path_to_text.py  path_utils.py  paths_matcher.py  random_path_selector.py  temp.py  text_graph.py  text_labeler.py
labels/: labels.json  labels_0_1.json  labels_1.json  labels_1_0.json  labels_1_1.json  labels_2.json  labels_2_0.json  labels_old.json
labels/0_1/: labels_0_1.json
text_labels/: labels_1.json  labels_1_old.json
